--- a/lec 15/style.css
+++ b/lec 15/style.css
@@ -22,6 +22,13 @@
     text-decoration: line-through;
 }
 
-li {
+li{
     cursor: pointer;
+}
+.del{
+padding-left: 2px;
+    margin-left: 50px;
+    background-color: silver;
+    border-radius: 10px;
+    color: #ce3448;
 }
